--- a/.github/workflows/text.yml
+++ b/.github/workflows/text.yml
@@ -59,11 +59,11 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t nabin85/a3_car_price:latest .
+          docker build -t samirpokharel/a3_car_price:latest .
 
       - name: Push Docker image
         run: |
-          docker push nabin85/a3_car_price:latest
+          docker push samirpokharel/a3_car_price:latest
 
       - name: Deploy to AIT server via ProxyJump
         uses: appleboy/ssh-action@v1.0.0
@@ -76,7 +76,7 @@ jobs:
           proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
 
           script: |
-            cd st125985
+            cd st125989
 
             # 1️⃣ Create .env file dynamically with MLflow credentials
             echo "MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}" > .env
