--- a/.github/workflows/text.yml
+++ b/.github/workflows/text.yml
@@ -39,13 +39,12 @@ jobs:
     needs: test
     runs-on: ubuntu-latest
     env:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
       MLFLOW_TRACKING_URI: ${{ secrets.MLFLOW_TRACKING_URI }}
       MLFLOW_USERNAME: ${{ secrets.MLFLOW_USERNAME }}
       MLFLOW_PASSWORD: ${{ secrets.MLFLOW_PASSWORD }}
       MODEL_NAME: ${{ secrets.MODEL_NAME }}
       RUN_ID: ${{ secrets.RUN_ID }}
+      DOCKER_IMAGE: samirpokharel/a3_car_price:latest
 
     steps:
       - name: Checkout code
@@ -57,33 +56,31 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Build Docker image
+      - name: Build and push Docker image
         run: |
-          docker build -t samirpokharel/a3_car_price:latest .
-
-      - name: Push Docker image
-        run: |
-          docker push samirpokharel/a3_car_price:latest
+          docker build -t $DOCKER_IMAGE .
+          docker push $DOCKER_IMAGE
 
       - name: Deploy to AIT server via ProxyJump
         uses: appleboy/ssh-action@v1.0.0
         with:
-          host: ${{ vars.HOST }} # final server
+          host: ${{ vars.HOST }}
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          proxy_host: ${{ vars.PROXY_HOST }} # jump server
+          proxy_host: ${{ vars.PROXY_HOST }}
           proxy_username: ${{ secrets.USERNAME }}
           proxy_key: ${{ secrets.SSH_PRIVATE_KEY }}
-
           script: |
             cd st125989
 
             # 1️⃣ Create .env file dynamically with MLflow credentials
-            echo "MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}" > .env
-            echo "MLFLOW_TRACKING_USERNAME=${{ secrets.MLFLOW_USERNAME }}" >> .env
-            echo "MLFLOW_TRACKING_PASSWORD=${{ secrets.MLFLOW_PASSWORD }}" >> .env
-            echo "MODEL_NAME=${{ secrets.MODEL_NAME }}" >> .env
-            echo "RUN_ID=${{ secrets.RUN_ID }}" >> .env
+            cat <<EOF > .env
+            MLFLOW_TRACKING_URI=${{ secrets.MLFLOW_TRACKING_URI }}
+            MLFLOW_USERNAME=${{ secrets.MLFLOW_USERNAME }}
+            MLFLOW_PASSWORD=${{ secrets.MLFLOW_PASSWORD }}
+            MODEL_NAME=${{ secrets.MODEL_NAME }}
+            RUN_ID=${{ secrets.RUN_ID }}
+            EOF
 
             # 2️⃣ Stop previous containers
             docker compose down
